--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ document.addEventListener('keyup', e => keys[e.key] = false);
 const idleImg = new Image();
 idleImg.src = "https://us.images.westend61.de/0000465443pw/face-of-tabby-kitten-felis-silvestris-catus-with-blue-eyes-MJOF000870.jpg"; // replace with kitten idle URL
 const shootImg = new Image();
-shootImg.src = "https://media.istockphoto.com/id/485809640/photo/cute-tabby-kitten.jpg?s=612x612&w=0&k=20&c=m0sUc4IpG1rOVs3Oyzex_tfsphPSWhBIKGVf2TZj9w4="; // replace with kitten shooting URL
+shootImg.src = "https://media.istockphoto.com/id/485809640/photo/cute-tabby-kitten.jpg"; // replace with kitten shooting URL
 
 class Player {
   constructor() {
