--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@ document.addEventListener('keyup', e => keys[e.key] = false);
 
 // Load images
 const idleImg = new Image();
-idleImg.src = "IDLE_IMAGE_URL_HERE"; // Replace with idle kitten URL
+idleImg.src = "https://us.images.westend61.de/0000465443pw/face-of-tabby-kitten-felis-silvestris-catus-with-blue-eyes-MJOF000870.jpg"; // Replace with idle kitten URL
 const shootImg = new Image();
-shootImg.src = "SHOOT_IMAGE_URL_HERE"; // Replace with shooting kitten URL
+shootImg.src = "https://media.istockphoto.com/id/485809640/photo/cute-tabby-kitten.jpg?s=612x612&w=0&k=20&c=m0sUc4IpG1rOVs3Oyzex_tfsphPSWhBIKGVf2TZj9w4="; // Replace with shooting kitten URL
 
 class Player {
   constructor() {
