--- a/Snakes.html
+++ b/Snakes.html
@@ -2,185 +2,216 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Open-World Snake RPG</title>
+<title>Color-Chaser Snake — Chromebook</title>
 <style>
   :root{--bg:#000;--fg:#fff;}
-  html,body{margin:0;padding:0;height:100%;background:var(--bg);color:var(--fg);font-family:Arial,sans-serif;display:flex;justify-content:center;align-items:center;overflow:hidden;}
-  canvas{border:2px solid #fff; display:block; background:#111;}
-  .hud{position:absolute;top:10px;left:10px;color:white;font-size:16px;}
+  html,body{margin:0;padding:0;height:100%;background:var(--bg);color:var(--fg);font-family:Arial,Helvetica,sans-serif;display:flex;justify-content:center;align-items:center;overflow:hidden;}
+  canvas{background:#111;border:2px solid #fff;border-radius:6px;display:block;}
+  .menu{position:absolute;top:0;left:0;width:100%;height:100%;display:flex;flex-direction:column;justify-content:center;align-items:center;gap:12px;background:rgba(0,0,0,0.85);}
+  .menu button{padding:10px 20px;font-size:18px;border-radius:6px;border:1px solid #fff;background:transparent;color:#fff;cursor:pointer;}
+  .menu .points{margin-top:10px;font-size:16px;}
+  #skinSelect{margin-top:10px;padding:5px;font-size:16px;border-radius:6px;border:1px solid #fff;background:#000;color:#fff;}
+  #caseAnimation{position:absolute;top:0;left:0;width:100%;height:100%;display:none;justify-content:center;align-items:center;background:rgba(0,0,0,0.95);}
+  #caseCanvas{background:#111;border:2px solid #fff;border-radius:6px;}
+  #caseResult{position:absolute;top:30%;width:100%;text-align:center;font-size:32px;font-weight:bold;display:none;}
 </style>
 </head>
 <body>
-<canvas id="game" width="600" height="400" tabindex="0"></canvas>
-<div class="hud" id="hud"></div>
+<canvas id="game" width="400" height="400" tabindex="0"></canvas>
+
+<div class="menu" id="menu">
+  <button id="startBtn">Start Game</button>
+  <button id="casesBtn">Open Case (5 points)</button>
+  <div class="points" id="pointsDisplay">Points: 0</div>
+  <label for="skinSelect" class="points">Select Skin:</label>
+  <select id="skinSelect"></select>
+</div>
+
+<div id="caseAnimation">
+  <canvas id="caseCanvas" width="400" height="100"></canvas>
+  <div id="caseResult"></div>
+</div>
 
 <script>
 (() => {
 const canvas = document.getElementById('game');
 const ctx = canvas.getContext('2d');
-const hud = document.getElementById('hud');
+const menu = document.getElementById('menu');
+const startBtn = document.getElementById('startBtn');
+const casesBtn = document.getElementById('casesBtn');
+const pointsDisplay = document.getElementById('pointsDisplay');
+const skinSelect = document.getElementById('skinSelect');
+const caseOverlay = document.getElementById('caseAnimation');
+const caseCanvas = document.getElementById('caseCanvas');
+const caseCtx = caseCanvas.getContext('2d');
+const caseResult = document.getElementById('caseResult');
 
-const CELL = 20;
-const VIEW_WIDTH = Math.floor(canvas.width / CELL);
-const VIEW_HEIGHT = Math.floor(canvas.height / CELL);
+const CELL = 15, COLS = canvas.width / CELL, ROWS = canvas.height / CELL;
+const MOVE_INTERVAL = 120;
 
-const MAP_WIDTH = 50;
-const MAP_HEIGHT = 50;
+let snake = [], dir = {x:1,y:0}, nextDir = {x:1,y:0};
+let food = {x:0, y:0, color:'red'};
+let timer, running=false, score=0, points=0;
+let obstacles=[], invincible=false, invTimer=0;
+let currentSkin='white';
+let ownedSkins=['white'];
+const colors=['red','green','blue','yellow','cyan','magenta'];
+const rareColors=['orange','purple','lime','pink','gold'];
+let grow = 0;
 
-// Snake player
-let snake = [{x:25, y:25}];
-let snakeDir = {x:0, y:0};
-let snakeLength = 1;
-let playerSkin = 'white';
+function randPos(){ return {x:Math.floor(Math.random()*COLS), y:Math.floor(Math.random()*ROWS)}; }
 
-let points = 0;
-let ownedSkins = ['white'];
-let items = [];
-let npcs = [];
-let quests = [];
-let keys = {};
-
-// Generate items
-for(let i=0;i<50;i++){
-    items.push({x:Math.floor(Math.random()*MAP_WIDTH), y:Math.floor(Math.random()*MAP_HEIGHT), type:'apple'});
+function placeFood(){
+  let p;
+  do { p = randPos(); } while(snake.some(s=>s.x===p.x && s.y===p.y) || obstacles.some(o=>o.x===p.x && o.y===p.y));
+  food = {...p, color: colors[Math.floor(Math.random()*colors.length)]};
 }
 
-// Generate NPCs
-npcs.push({x:10,y:10,name:'Bob',quest:'Collect 5 apples',questItem:'apple',questCount:5,completed:false,collected:0});
-npcs.push({x:40,y:35,name:'Alice',quest:'Find the golden skin',questItem:'gold',questCount:1,completed:false,collected:0});
-
-// Camera
-let camera = {x:0, y:0};
-
-// Handle keys
-window.addEventListener('keydown', e=>{
-    keys[e.key]=true;
-});
-window.addEventListener('keyup', e=>{
-    keys[e.key]=false;
-});
-
-// Game loop
-function gameLoop(){
-    handleMovement();
-    updateSnake();
-    checkItemCollision();
-    updateCamera();
-    draw();
-    updateHUD();
-    requestAnimationFrame(gameLoop);
+function placeObstacles(count=5){
+  obstacles=[];
+  for(let i=0;i<count;i++){
+    let p;
+    do { p = randPos(); } while(snake.some(s=>s.x===p.x && s.y===p.y) || obstacles.some(o=>o.x===p.x && o.y===p.y));
+    obstacles.push(p);
+  }
 }
 
-// Movement
-function handleMovement(){
-    if(keys['ArrowUp'] && snakeDir.y===0) snakeDir = {x:0,y:-1};
-    if(keys['ArrowDown'] && snakeDir.y===0) snakeDir = {x:0,y:1};
-    if(keys['ArrowLeft'] && snakeDir.x===0) snakeDir = {x:-1,y:0};
-    if(keys['ArrowRight'] && snakeDir.x===0) snakeDir = {x:1,y:0};
+function startGame(){
+  snake = [{x:10,y:10,color:currentSkin},{x:9,y:10,color:'#555'},{x:8,y:10,color:'#333'}];
+  dir = {x:1,y:0}; nextDir=dir;
+  score=0; invincible=false; invTimer=0; grow=0;
+  obstacles=[]; placeObstacles(); placeFood();
+  running = true;
+  if(timer) clearInterval(timer);
+  timer = setInterval(tick, MOVE_INTERVAL);
+  draw();
+  menu.style.display = 'none';
+  canvas.focus();
 }
 
-// Update snake positions
-function updateSnake(){
-    if(snakeDir.x===0 && snakeDir.y===0) return;
-    const newHead = {x:snake[0].x+snakeDir.x, y:snake[0].y+snakeDir.y};
-    // Check walls
-    if(newHead.x<0 || newHead.x>=MAP_WIDTH || newHead.y<0 || newHead.y>=MAP_HEIGHT){
-        resetGame();
-        return;
-    }
-    // Check self collision
-    if(snake.some((seg,i)=>i>0 && seg.x===newHead.x && seg.y===newHead.y)){
-        resetGame();
-        return;
-    }
-    snake.unshift(newHead);
-    if(snake.length>snakeLength) snake.pop();
+function gameOver(){
+  running=false;
+  if(timer){ clearInterval(timer); timer=null; }
+  menu.style.display='flex';
 }
 
-// Check item collection
-function checkItemCollision(){
-    items = items.filter(item=>{
-        if(item.x===snake[0].x && item.y===snake[0].y){
-            points++;
-            snakeLength++;
-            npcs.forEach(npc=>{
-                if(npc.questItem===item.type && !npc.completed){
-                    npc.collected++;
-                    if(npc.collected>=npc.questCount) npc.completed=true;
-                }
-            });
-            return false;
-        }
-        return true;
-    });
+function tick(){
+  if((nextDir.x!==-dir.x||nextDir.y!==-dir.y)||snake.length===1) dir=nextDir;
+  const head={x:snake[0].x+dir.x, y:snake[0].y+dir.y, color:snake[0].color};
+
+  if(head.x<0 || head.x>=COLS || head.y<0 || head.y>=ROWS){ gameOver(); return; }
+  if(snake.some(s=>s.x===head.x && s.y===head.y) && !invincible){ gameOver(); return; }
+  if(obstacles.some(o=>o.x===head.x && o.y===head.y) && !invincible){ gameOver(); return; }
+
+  snake.unshift(head);
+
+  // Grow snake when eating
+  if(head.x===food.x && head.y===food.y){
+    points += 10;
+    grow += 2; // snake grows 2 segments
+    if(head.color===food.color){ score+=10; head.color=food.color; }
+    placeFood(); updatePoints();
+  } else if(grow>0){
+    grow--;
+  } else {
+    snake.pop();
+  }
+
+  if(invincible){ invTimer--; if(invTimer<=0) invincible=false; }
+  draw();
 }
 
-// Update camera
-function updateCamera(){
-    camera.x = snake[0].x - Math.floor(VIEW_WIDTH/2);
-    camera.y = snake[0].y - Math.floor(VIEW_HEIGHT/2);
-    camera.x = Math.max(0, Math.min(MAP_WIDTH-VIEW_WIDTH, camera.x));
-    camera.y = Math.max(0, Math.min(MAP_HEIGHT-VIEW_HEIGHT, camera.y));
-}
-
-// Draw
 function draw(){
-    ctx.fillStyle='#111';
-    ctx.fillRect(0,0,canvas.width,canvas.height);
-
-    // Items
-    items.forEach(item=>{
-        const dx = (item.x-camera.x)*CELL;
-        const dy = (item.y-camera.y)*CELL;
-        ctx.fillStyle='red';
-        ctx.fillRect(dx+2, dy+2, CELL-4, CELL-4);
-    });
-
-    // NPCs
-    npcs.forEach(npc=>{
-        const dx = (npc.x-camera.x)*CELL;
-        const dy = (npc.y-camera.y)*CELL;
-        ctx.fillStyle='orange';
-        ctx.fillRect(dx+2, dy+2, CELL-4, CELL-4);
-    });
-
-    // Snake
-    snake.forEach((seg,i)=>{
-        const dx = (seg.x-camera.x)*CELL;
-        const dy = (seg.y-camera.y)*CELL;
-        ctx.fillStyle = i===0 ? playerSkin : `rgb(${220-i*10},${220-i*10},${220-i*10})`;
-        ctx.fillRect(dx+1, dy+1, CELL-2, CELL-2);
-    });
+  ctx.fillStyle='#000'; ctx.fillRect(0,0,canvas.width,canvas.height);
+  ctx.fillStyle='#555'; obstacles.forEach(o=>ctx.fillRect(o.x*CELL+2,o.y*CELL+2,CELL-4,CELL-4));
+  ctx.fillStyle=food.color; ctx.fillRect(food.x*CELL+2,food.y*CELL+2,CELL-4,CELL-4);
+  for(let i=0;i<snake.length;i++){
+    const s=snake[i];
+    ctx.fillStyle=i===0?currentSkin:`rgb(${220-i*10},${220-i*10},${220-i*10})`;
+    ctx.fillRect(s.x*CELL+1,s.y*CELL+1,CELL-2,CELL-2);
+  }
+  ctx.fillStyle='white'; ctx.font='16px Arial'; ctx.fillText('Points: '+points,10,20);
 }
 
-// HUD
-function updateHUD(){
-    let hudText = `Points: ${points}<br>Skins: ${ownedSkins.join(', ')}<br>`;
-    npcs.forEach(npc=>{
-        if(Math.abs(snake[0].x-npc.x)<=1 && Math.abs(snake[0].y-npc.y)<=1){
-            hudText += `${npc.name}: ${npc.quest} ${npc.completed?"(Completed)":""}<br>`;
-        }
-    });
-    hud.innerHTML = hudText;
+function updatePoints(){
+  pointsDisplay.textContent='Points: '+points;
+  updateSkinSelect();
 }
 
-function resetGame(){
-    snake = [{x:25,y:25}];
-    snakeDir = {x:0,y:0};
-    snakeLength = 1;
-    points = 0;
-    items = [];
-    for(let i=0;i<50;i++){
-        items.push({x:Math.floor(Math.random()*MAP_WIDTH), y:Math.floor(Math.random()*MAP_HEIGHT), type:'apple'});
+function updateSkinSelect(){
+  skinSelect.innerHTML='';
+  ownedSkins.forEach(skin=>{
+    const opt = document.createElement('option');
+    opt.value = skin; opt.textContent = skin.charAt(0).toUpperCase()+skin.slice(1);
+    if(skin===currentSkin) opt.selected=true;
+    skinSelect.appendChild(opt);
+  });
+}
+
+skinSelect.addEventListener('change', e=>{
+  currentSkin = e.target.value;
+  draw();
+});
+
+startBtn.addEventListener('click', startGame);
+
+casesBtn.addEventListener('click',()=>{
+  if(points<5){ alert("Not enough points!"); return; }
+  points -=5; updatePoints();
+
+  const roll = Math.random();
+  let finalSkin;
+  if(roll<0.6) finalSkin=colors[Math.floor(Math.random()*colors.length)];
+  else if(roll<0.95) finalSkin=rareColors[Math.floor(Math.random()*rareColors.length)];
+  else finalSkin='gold';
+  ownedSkins.push(finalSkin);
+
+  // Show case animation
+  caseOverlay.style.display='flex';
+  caseResult.style.display='none';
+  const scrollSkins = [...colors,...rareColors,'gold','red','green','blue','yellow'];
+  let offset=0, speed=20, frames=0;
+
+  function animateCase(){
+    frames++;
+    caseCtx.fillStyle='#111'; caseCtx.fillRect(0,0,caseCanvas.width,caseCanvas.height);
+    for(let i=0;i<scrollSkins.length;i++){
+      const x = (i*80 - offset + caseCanvas.width/2) % (scrollSkins.length*80) - 80;
+      caseCtx.fillStyle = scrollSkins[i]; caseCtx.fillRect(x,20,70,60);
     }
-    npcs.forEach(npc=>{
-        npc.completed=false;
-        npc.collected=0;
-    });
-}
+    offset += speed;
+    if(frames>100) speed*=0.9;
+    if(speed<0.5){
+      // show the result in big text
+      caseResult.style.color = finalSkin;
+      caseResult.textContent = 'You got: ' + finalSkin.toUpperCase();
+      caseResult.style.display='block';
+      setTimeout(()=>{
+        caseOverlay.style.display='none';
+        updatePoints();
+      }, 1500);
+      currentSkin = finalSkin;
+      updatePoints();
+      return;
+    }
+    requestAnimationFrame(animateCase);
+  }
+  animateCase();
+});
 
-// Start
-gameLoop();
+updatePoints();
+
+window.addEventListener('keydown', e=>{
+  if(!running) return;
+  const k=e.key;
+  if(k==='ArrowUp'||k==='w'||k==='W') nextDir={x:0,y:-1};
+  else if(k==='ArrowDown'||k==='s'||k==='S') nextDir={x:0,y:1};
+  else if(k==='ArrowLeft'||k==='a'||k==='A') nextDir={x:-1,y:0};
+  else if(k==='ArrowRight'||k==='d'||k==='D') nextDir={x:1,y:0};
+});
+
+canvas.addEventListener('click', ()=> canvas.focus());
+
 })();
 </script>
 </body>
